out/Programs/reduction/temp.txt
tempprog.java:17: error: ',', ')', or '[' expected
  case R_D<Integer, I_B<Integer, Integer>>(var a, var b, R_A<I_B<Integer, Integer>, I_B<Integer, Integer>>(var c, var d, var e)) -> 0; 
                                                                                                          ^
tempprog.java:17: error: invalid lambda parameter declaration
  case R_D<Integer, I_B<Integer, Integer>>(var a, var b, R_A<I_B<Integer, Integer>, I_B<Integer, Integer>>(var c, var d, var e)) -> 0; 
                                          ^
  (cannot mix 'var' and implicitly-typed parameters)
tempprog.java:17: error: -> expected
  case R_D<Integer, I_B<Integer, Integer>>(var a, var b, R_A<I_B<Integer, Integer>, I_B<Integer, Integer>>(var c, var d, var e)) -> 0; 
                                                                                                                               ^
tempprog.java:18: error: ',', ')', or '[' expected
  case R_D<Integer, I_B<Integer, Integer>>(var a, var b, R_B<I_B<Integer, Integer>, I_B<Integer, Integer>>()) -> 1; 
                                                                                                          ^
tempprog.java:18: error: invalid lambda parameter declaration
  case R_D<Integer, I_B<Integer, Integer>>(var a, var b, R_B<I_B<Integer, Integer>, I_B<Integer, Integer>>()) -> 1; 
                                          ^
  (cannot mix 'var' and implicitly-typed parameters)
tempprog.java:18: error: -> expected
  case R_D<Integer, I_B<Integer, Integer>>(var a, var b, R_B<I_B<Integer, Integer>, I_B<Integer, Integer>>()) -> 1; 
                                                                                                            ^
tempprog.java:19: error: : or -> expected
  case R_E<Integer>() -> 2; 
                          ^
tempprog.java:20: error: ')' expected
  case R_F<Integer>(R_D<I_B<Integer, Integer>, Integer>(var a, var b, var c), var d, var e) -> 3; 
                                   ^
tempprog.java:20: error: illegal start of expression
  case R_F<Integer>(R_D<I_B<Integer, Integer>, Integer>(var a, var b, var c), var d, var e) -> 3; 
                                             ^
tempprog.java:20: error: -> expected
  case R_F<Integer>(R_D<I_B<Integer, Integer>, Integer>(var a, var b, var c), var d, var e) -> 3; 
                                                                            ^
tempprog.java:20: error: patterns in switch statements are a preview feature and are disabled by default.
  case R_F<Integer>(R_D<I_B<Integer, Integer>, Integer>(var a, var b, var c), var d, var e) -> 3; 
                                                                              ^
  (use --enable-preview to enable patterns in switch statements)
tempprog.java:20: error: : or -> expected
  case R_F<Integer>(R_D<I_B<Integer, Integer>, Integer>(var a, var b, var c), var d, var e) -> 3; 
                                                                                          ^
tempprog.java:21: error: : or -> expected
  case R_H<Integer>(var a, var b) -> 4; 
                                      ^
13 errors
